--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,7 +64,7 @@
   }
   
   a {
-    color: #1772d0;
+    color: #08338f;
     text-decoration: none;
   }
   
@@ -81,28 +81,33 @@
   p,
   a {
     font-family: 'Lato', Verdana, Helvetica, sans-serif;
-    font-size: 14px
+    font-size: 18px;
+    line-height: 1.3;
   }
   
   strong {
     font-family: 'Lato', Verdana, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 18px;
+    line-height: 1.3;
   }
   
   heading {
     font-family: 'Lato', Verdana, Helvetica, sans-serif;
-    font-size: 22px;
+    font-size: 26px;
+    line-height: 1.0;
   }
   
   papertitle {
     font-family: 'Lato', Verdana, Helvetica, sans-serif;
-    font-size: 14px;
-    font-weight: 700
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.3;
   }
   
   name {
     font-family: 'Lato', Verdana, Helvetica, sans-serif;
-    font-size: 32px;
+    font-size: 36px;
+    line-height: 1.3;
   }
   
   .one {
